Fix: Resolve VBA compile errors, runtime refresh issue, and formatting
This commit addresses several issues identified during debugging and testing:

Compile Errors Resolved:
- Fixed multiple "Method or data member not found" errors in ThisWorkbook, mod_Logger, and mod_510k_Processor by correcting module references for functions/constants moved during refactoring (e.g., RefreshPowerQuery, VERSION_INFO, IsMaintainerUser).
- Fixed "Variable not defined" errors in mod_510k_Processor and mod_Logger by using correct Enum values (lgERROR, lvlERROR) and qualifying constants (mod_Config.VERSION_INFO).
- Fixed "ByRef argument type mismatch" and subsequent "For Each control variable must be Variant" errors in mod_Schema by adjusting variable types and using explicit type conversion (CStr) in function calls.
- Fixed "Syntax error" in mod_Format related to declaring a typed Const within a subroutine.

Runtime Error Resolved:
- Fixed "QueryTable refresh failed... Refresh disabled." error in mod_DataIO by ensuring the QueryTable's EnableRefresh property is set to True before attempting the refresh operation.

Formatting Issues Addressed (mod_Format):
- Disabled pane freezing as requested.
- Added logic to delete known duplicate columns (e.g., "Category 2").
- Updated the desired column order in the ReorganizeColumns subroutine based on user feedback.
- Ensured columns are autofit after all formatting and reorganization steps.

Documentation Updates:
- Added standardized, detailed header comment blocks to all VBA modules (.bas, .cls) documenting purpose, dependencies, key functions, and revision history.
- Updated README.md to reflect the current application features, setup instructions (pointing configuration to mod_Config), architecture summary, and logging/tracing details.
- Updated docs/ARCHITECTURE.md with the refactored module structure and corrected data flow description.
- Created docs/AI_DEVELOPMENT_GUIDE.md outlining coding standards, commenting requirements (including h

--- a/src/vba/ThisWorkbook.cls
+++ b/src/vba/ThisWorkbook.cls
@@ -1,9 +1,43 @@
+' ==========================================================================
+' Module      : ThisWorkbook (Class Module)
+' Author      : [Original Author - Unknown]
+' Date        : [Original Date - Unknown]
+' Maintainer  : Cline (AI Assistant)
+' Version     : See mod_Config.VERSION_INFO
+' ==========================================================================
+' Description : This is the code module associated with the Excel Workbook
+'               object itself. It primarily contains event handler procedures
+'               that respond to workbook-level events.
+'
+' Key Procedures:
+'               - Workbook_Open(): Automatically executes when the workbook is
+'                 opened. Serves as the main entry point for the automated
+'                 510(k) processing workflow. It handles initial setup,
+'                 triggers the Power Query data refresh (via mod_DataIO),
+'                 and then calls the main processing orchestration routine
+'                 (mod_510k_Processor.ProcessMonthly510k). Includes error
+'                 handling specific to the opening sequence.
+'               - Workbook_BeforeClose(Cancel As Boolean): Executes just before
+'                 the workbook closes. Currently used to perform cleanup tasks,
+'                 specifically trimming the RunLog sheet using mod_Logger.TrimRunLog.
+'
+' Dependencies: - mod_DataIO: Calls RefreshPowerQuery.
+'               - mod_510k_Processor: Calls ProcessMonthly510k.
+'               - mod_Logger: Calls TrimRunLog.
+'               - Implicitly relies on constants/settings defined in mod_Config
+'                 via the modules it calls.
+'
+' Revision History:
+' --------------------------------------------------------------------------
+' Date        Author          Description
+' ----------- --------------- ----------------------------------------------
+' 2025-04-30  Cline (AI)      - Added detailed module header comment block.
+' 2025-04-29  Cline (AI)      - Corrected module reference for RefreshPowerQuery call
+'                               (changed from mod_510k_Processor to mod_DataIO).
+' [Previous dates/authors/changes unknown]
+' ==========================================================================
 Option Explicit
 Attribute VB_Name = "ThisWorkbook"
-
-' ==========================================================================
-' ===                  THISWORKBOOK MODULE CODE                          ===
-' ==========================================================================
 ' This code handles the automatic workbook events:
 ' - Workbook_Open: Entry point for the automated 510(k) processing
 ' - Workbook_BeforeClose: Performs cleanup operations like trimming the log
