feat: Debug Power Query refresh and logging systems
This commit encapsulates a significant debugging session focused on resolving issues with the Power Query refresh process, duplicate column generation, and the VBA logging mechanisms.

**Logging System (`mod_Logger` / `RunLog`):**

*   Identified that `FlushLogBuf` was not called on successful completion (`CleanExit` in `mod_510k_Processor`) or before workbook close (`Workbook_BeforeClose`).
*   Added explicit calls to `FlushLogBuf` in both `mod_510k_Processor` (within `CleanExit` and `ProcessErrorHandler`) and `ThisWorkbook.cls` (within `Workbook_BeforeClose`) to ensure logs are written reliably.
*   Temporarily added and then removed `Debug.Print` statements within `mod_Logger` to diagnose initial failures.

**Power Query Refresh & Duplicate Columns (`mod_DataIO`, `mod_Format`, `mod_510k_Processor`):**

*   Diagnosed errors (424 "Object required", 1004 "Application-defined...") occurring during `RefreshPowerQuery`.
*   Attempted several strategies to prevent duplicate columns and refresh errors:
    *   Deleting the `ListObject` entirely before refresh (`ClearExistingTable` with `.Delete`). Failed with error 424.
    *   Clearing `DataBodyRange` contents (`ClearExistingTableRows` with `.ClearContents`). Failed with error 1004.
    *   Reverting to deleting the `ListObject` and refreshing via `WorkbookConnection`. Failed with error 424.
*   Reverted `RefreshPowerQuery` in `mod_DataIO` to perform a direct refresh without pre-clearing the table, accepting potential duplicate columns.
*   Modified `DeleteDuplicateColumns` in `mod_Format` to use pattern matching (`Like "* [0-9]"`) to remove duplicate columns *after* refresh and processing.
*   Added a robust fallback mechanism in `mod_510k_Processor` to attempt recreating a missing table by refreshing the underlying `WorkbookConnection`.
*   Improved error handling in `mod_510k_Processor` to capture `Err.Number` and `Err.Description` immediately within the error handl

--- a/src/vba/ThisWorkbook.cls
+++ b/src/vba/ThisWorkbook.cls
@@ -39,6 +39,9 @@
 ' 2025-04-30  Cline (AI)      - Reverted: Restored explicit module qualifier (mod_DataIO.)
 '                               for RefreshPowerQuery call.
 ' 2025-04-30  Cline (AI)      - Added call to mod_DataIO.TestCall for debugging compile error.
+' 2025-04-30  Cline (AI)      - Removed Debug.Print statements previously added for tracing.
+' 2025-04-30  Cline (AI)      - Added call to mod_Logger.FlushLogBuf in Workbook_BeforeClose
+'                               to ensure logs are written before closing/trimming.
 ' [Previous dates/authors/changes unknown]
 ' ==========================================================================
 Option Explicit
@@ -72,7 +75,6 @@ Private Sub Workbook_Open()
 
     ' --- 3. Always Refresh Power Query Data First ---
     Application.StatusBar = "Refreshing FDA data (Step 1/2)..."
-    Debug.Print Time & " - Workbook_Open: Calling RefreshPowerQuery..."
 
     ' Call the refresh function from the other module.
     ' Assumes RefreshPowerQuery is a Public Function in mod_510k_Processor
@@ -132,7 +134,6 @@ Private Sub Workbook_Open()
     ' --- 4. Call the Main Processing Sub (Scoring, Formatting, Archiving) ---
     '    This sub contains the Day Guard logic.
     Application.StatusBar = "Processing leads and finalizing sheet (Step 2/2)..."
-    Debug.Print Time & " - Workbook_Open: Calling ProcessMonthly510k..."
 
     Call mod_510k_Processor.ProcessMonthly510k ' Call the main routine in the other module
 
@@ -173,11 +174,15 @@ Private Sub Workbook_BeforeClose(Cancel As Boolean)
     '          2. [Optional] Could add other cleanup tasks here as needed
     
     On Error Resume Next ' Handle potential errors gracefully - we don't want to prevent closing
-    
-    ' --- 1. Trim the Log Sheet ---
+
+    ' --- 1. Flush Log Buffer ---
+    ' Ensure any remaining logs in memory are written to the sheet before closing/trimming.
+    mod_Logger.FlushLogBuf
+
+    ' --- 2. Trim the Log Sheet ---
     mod_Logger.TrimRunLog 5000 ' Keep the most recent 5000 rows in the log, delete older entries
-    
-    ' --- 2. [Optional] Any other cleanup tasks could be added here ---
+
+    ' --- 3. [Optional] Any other cleanup tasks could be added here ---
     ' Examples:
     ' - Ensure all sheets are properly archived
     ' - Save user preferences/settings
